--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --open",
+    "dev": "APP_ENV=development vite --open",
     "build": "vite build",
     "preview": "vite preview --open --host"
   },
